<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".main.FlightsFragment">

    <TextView
        android:id="@+id/flights_title"
        style="@style/EffectiveTest.Text.Title1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/flights_title"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    
    <com.google.android.material.card.MaterialCardView
        style="?attr/materialCardViewFilledStyle"
        android:id="@+id/search_card"
        app:cardBackgroundColor="@color/grey3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="32dp"
        app:cardCornerRadius="16dp"
        app:layout_constraintTop_toBottomOf="@id/flights_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.card.MaterialCardView
            style="?attr/materialCardViewFilledStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:cardCornerRadius="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_search"
                    android:layout_marginStart="8dp"
                    android:layout_gravity="center"
                    android:importantForAccessibility="no" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_margin="16dp">

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/TextInput"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:textColorHint="@color/grey6"
                        android:padding="0dp"
                        app:hintEnabled="false"
                        app:boxStrokeWidth="0dp"
                        app:boxStrokeWidthFocused="0dp">
                        <com.google.android.material.textfield.TextInputEditText
                            style="@style/TextInput"
                            android:id="@+id/from_edit_text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/from_sample"
                            android:padding="0dp"/>
                    </com.google.android.material.textfield.TextInputLayout>


                    <com.google.android.material.divider.MaterialDivider
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        app:dividerColor="@color/grey5" />

                    <TextView
                        android:id="@+id/destination_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/destination_sample"
                        style="@style/EffectiveTest.Text.ButtonText1"
                        android:textColor="@color/grey6"/>

                </LinearLayout>

            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
    </com.google.android.material.card.MaterialCardView>

    <TextView
        style="@style/EffectiveTest.Text.Title1"
        android:id="@+id/music_fly_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/search_card"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/music_fly_title"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/offers_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp"
        android:paddingHorizontal="8dp"
        android:clipToPadding="false"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintTop_toBottomOf="@id/music_fly_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>