<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:behavior_peekHeight="500dp"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/materialCardView"
        style="?attr/materialCardViewFilledStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="45dp"
        android:backgroundTint="@color/grey3"
        app:cardCornerRadius="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:orientation="vertical"
            tools:layout_editor_absoluteX="42dp"
            tools:layout_editor_absoluteY="226dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:src="@drawable/ic_plane"
                    android:importantForAccessibility="no" />

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/TextInput"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColorHint="@color/grey6"
                    app:boxStrokeWidth="0dp"
                    app:boxStrokeWidthFocused="0dp"
                    app:hintEnabled="false">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/fromInputText"
                        style="@style/TextInput"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/from_sample"
                        android:padding="0dp" />
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="1dp"
                app:dividerColor="@color/grey5" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:src="@drawable/ic_search"
                    android:importantForAccessibility="no" />

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/TextInput"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:imeOptions="actionSearch"
                    android:textColorHint="@color/grey6"
                    app:boxStrokeWidth="0dp"
                    app:boxStrokeWidthFocused="0dp"
                    app:hintEnabled="false">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/destinationInputText"
                        style="@style/TextInput"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/destination_sample"
                        android:imeOptions="actionSearch"
                        android:inputType="text"
                        android:padding="0dp" />
                </com.google.android.material.textfield.TextInputLayout>

                <ImageView
                    android:id="@+id/clear_button"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/ic_close"
                    android:importantForAccessibility="no" />
            </LinearLayout>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <Button
        android:id="@+id/route_button"
        style="@style/FastButton"
        android:layout_marginStart="10dp"
        android:layout_marginTop="24dp"
        app:backgroundTint="@color/green"
        app:icon="@drawable/ic_route"
        app:layout_constraintEnd_toStartOf="@+id/anywhere_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="@+id/materialCardView"
        app:layout_constraintTop_toBottomOf="@+id/materialCardView" />

    <Button
        android:id="@+id/anywhere_button"
        style="@style/FastButton"
        android:layout_marginTop="24dp"
        app:backgroundTint="@color/blue"
        app:icon="@drawable/ic_ball"
        app:layout_constraintEnd_toStartOf="@+id/weekend_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/route_button"
        app:layout_constraintTop_toBottomOf="@+id/materialCardView" />

    <Button
        android:id="@+id/weekend_button"
        style="@style/FastButton"
        android:layout_marginTop="24dp"
        app:backgroundTint="@color/dark_blue"
        app:icon="@drawable/ic_calendar"
        app:layout_constraintEnd_toStartOf="@+id/hot_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/anywhere_button"
        app:layout_constraintTop_toBottomOf="@+id/materialCardView" />

    <Button
        android:id="@+id/hot_button"
        style="@style/FastButton"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="10dp"
        app:backgroundTint="@color/red"
        app:icon="@drawable/ic_fire"
        app:layout_constraintEnd_toEndOf="@+id/materialCardView"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/weekend_button"
        app:layout_constraintTop_toBottomOf="@+id/materialCardView" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/difficult_route"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/route_button"
        app:layout_constraintStart_toStartOf="@+id/route_button"
        app:layout_constraintTop_toBottomOf="@+id/route_button" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/anywhere"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/anywhere_button"
        app:layout_constraintStart_toStartOf="@+id/anywhere_button"
        app:layout_constraintTop_toBottomOf="@+id/anywhere_button" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/weekend"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/weekend_button"
        app:layout_constraintStart_toStartOf="@+id/weekend_button"
        app:layout_constraintTop_toBottomOf="@+id/weekend_button" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hot_tickets"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/hot_button"
        app:layout_constraintStart_toStartOf="@+id/hot_button"
        app:layout_constraintTop_toBottomOf="@+id/hot_button" />

    <com.google.android.material.card.MaterialCardView
        style="?attr/materialCardViewFilledStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:backgroundTint="@color/grey3"
        app:cardCornerRadius="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/barrier"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="16dp"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/istanbul"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="8dp">

                    <ImageView
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/istanbul"
                        android:importantForAccessibility="no" />

                </androidx.cardview.widget.CardView>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="8dp"
                    android:orientation="vertical">

                    <TextView
                        style="@style/EffectiveTest.Text.Title3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="4dp"
                        android:text="@string/istanbul" />

                    <TextView
                        style="@style/EffectiveTest.Text.Text2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:text="@string/popular_destination"
                        android:textColor="@color/grey5" />
                </LinearLayout>
            </LinearLayout>

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginVertical="8dp"
                app:dividerColor="@color/grey5" />

            <LinearLayout
                android:id="@+id/sochi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="8dp">

                    <ImageView
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/sochi"
                        android:importantForAccessibility="no" />

                </androidx.cardview.widget.CardView>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="8dp"
                    android:orientation="vertical">

                    <TextView
                        style="@style/EffectiveTest.Text.Title3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="4dp"
                        android:text="@string/sochi" />

                    <TextView
                        style="@style/EffectiveTest.Text.Text2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:text="@string/popular_destination"
                        android:textColor="@color/grey5" />
                </LinearLayout>
            </LinearLayout>

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginVertical="8dp"
                app:dividerColor="@color/grey5" />

            <LinearLayout
                android:id="@+id/phuket"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="8dp">

                    <ImageView
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/phuket"
                        android:importantForAccessibility="no" />

                </androidx.cardview.widget.CardView>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="8dp"
                    android:orientation="vertical">

                    <TextView
                        style="@style/EffectiveTest.Text.Title3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="4dp"
                        android:text="@string/phuket" />

                    <TextView
                        style="@style/EffectiveTest.Text.Text2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:text="@string/popular_destination"
                        android:textColor="@color/grey5" />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="textView,textView2,textView3,textView4" />

</androidx.constraintlayout.widget.ConstraintLayout>